# ray-tracer-rust

./: .gitignore  Cargo.toml  ]
benches/: my_benchmark.rs
resources/: test.ppm  world_ex.ppm
src/: main.rs
src/lib/: lib.rs
src/lib/camera/: camera.rs
src/lib/canvas/: canvas.rs
src/lib/colour/: colour.rs
src/lib/exercises/: mod.rs
src/lib/exercises/clock/: clock.rs
src/lib/exercises/projectile_test/: projectile.rs
src/lib/exercises/ray_sphere/: ray_sphere.rs
src/lib/exercises/shared/: shared.rs
src/lib/exercises/world_ex/: mod.rs  world_ex.rs
src/lib/geometry/: vector.rs
src/lib/light/: light.rs
src/lib/material/: Pattern.rs  material.rs  mod.rs  pattern.rs
src/lib/matrix/: matrix.rs
src/lib/projectile_test/: projectile.rs
src/lib/ray/: intersection.rs  mod.rs  ray.rs
src/lib/shapes/: mod.rs  plane.rs  shape.rs  sphere.rs
src/lib/utils/: math_ext.rs  mod.rs  test.rs
src/lib/world/: world.rs
