[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.9.0"
num-traits = "0.2.15"

[[bin]]
name = "module_bin"
path = "src/main.rs"

[lib]
name = "module_lib"
path = "src/lib/lib.rs"
