[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.9.0"
num-traits = "0.2.15"
rayon = "1.5.3"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bin]]
name = "module_bin"
path = "src/main.rs"

[lib]
name = "module_lib"
path = "src/lib/lib.rs"
